--- a/makefile--
+++ b/makefile--
@@ -36,15 +36,15 @@ STLIBNAME = $(LIBNAME).a
 all: $(DYLIBNAME) $(STLIBNAME) $(TESTS)  
   
 $(DYLIBNAME): $(OBJ)  
-        $(DYLIBCMD) $< $(LDFLAGS)  
+ ##       $(DYLIBCMD) $< $(LDFLAGS)  
       
 $(STLIBNAME): $(OBJ)  
-        ar rcs $@ $<  
+      ##  ar rcs $@ $<  
   
 $(OBJ): cJSON.c cJSON.h   
   
 .c.o:  
-        $(CC) -ansi -pedantic -c $(R_CFLAGS) $<  
+   ##     $(CC) -ansi -pedantic -c $(R_CFLAGS) $<  
   
 $(TESTS): cJSON.c cJSON.h test.c  
         $(CC)  cJSON.c test.c -o test -lm -I.  
